// Bun Snapshot v1, https://goo.gl/fbAQLP

exports[`vite-plugin-bun-csp scripts it should handle inline scripts 1`] = `
"<html>
  <head><meta http-equiv="Content-Security-Policy" content="base-uri 'none'; default-src 'self'; object-src 'none'; script-src-elem 'sha384-38HOgRVS9paAKT7chxOOnubobWZ3kJfici4Bp1PHnTX8gK1inuKN/7g2KVNbcmuY'; script-src 'strict-dynamic'; style-src 'self'" /> </head>
  <body>
    <h1 id="app"></h1>
    <script>
      document.querySelector("#app").innerHTML = \`Hello World\`;
    </script>
  </body>
</html>
"
`;

exports[`vite-plugin-bun-csp scripts it should handle local scripts 1`] = `
"<html>
  <head><meta http-equiv="Content-Security-Policy" content="base-uri 'none'; default-src 'self'; object-src 'none'; script-src-elem 'sha384-vTb4ka/HRdvMTCK99IHf4grsm4H7ngk8QotM6VmrozV6fFTs6kVHItFSLXWTgnAh'; script-src 'strict-dynamic'" />   <script type="module" crossorigin src="/assets/index-DXh1w3r_.js" integrity="sha384-vTb4ka/HRdvMTCK99IHf4grsm4H7ngk8QotM6VmrozV6fFTs6kVHItFSLXWTgnAh"></script>
 </head>
  <body>
    <h1 id="app"></h1>
  </body>
</html>
"
`;

exports[`vite-plugin-bun-csp scripts it should handle external scripts 1`] = `
"<html>
  <head><meta http-equiv="Content-Security-Policy" content="base-uri 'none'; default-src 'self'; object-src 'none'; script-src-elem 'sha384-DpVxUeeBWjUvUV1czyIHJAjh+jYUZFu2lLakbdua5vbwOrBGi1UgaKCHjTC+x3Ky' 'sha384-kgS1YDRuhk0bciElGkbKuHKqpmzV1kVKPcsiQlZ2/UrCfdNkc0GFx6OFgu5CKekd'; script-src 'strict-dynamic'; style-src 'self'" />
    <script src="https://cdn.jsdelivr.net/npm/dayjs@1.11.13/dayjs.min.js" integrity="sha384-DpVxUeeBWjUvUV1czyIHJAjh+jYUZFu2lLakbdua5vbwOrBGi1UgaKCHjTC+x3Ky" crossorigin="anonymous"></script>
  </head>
  <body>
    <h1>Hello World</h1>
    <h3 id="date"></h3>
    <script>
      document.querySelector("#date").innerHTML = dayjs().format("DD-MM-YYYY");
    </script>
  </body>
</html>
"
`;

exports[`vite-plugin-bun-csp styles it should handle inline styles 1`] = `
"<html>
  <head><meta http-equiv="Content-Security-Policy" content="base-uri 'none'; default-src 'self'; object-src 'none'; style-src 'sha384-fw1AlJQQH9oKSLUz3uHsWxT8diqDf9FgPL3MrSOM+JAV6LQSoPIrMUVTdfYpnZxg'" />
    <style>
      h1 {
        color: purple;
      }
    </style>
  </head>
  <body>
    <h1>Hello World</h1>
  </body>
</html>
"
`;

exports[`vite-plugin-bun-csp styles it should handle local styles 1`] = `
"<html>
  <head><meta http-equiv="Content-Security-Policy" content="base-uri 'none'; default-src 'self'; object-src 'none'" />
    <link rel="stylesheet" crossorigin href="/assets/index-WbHkZAB3.css" integrity="sha384-+AelCtrokKIdKrnBX1EthqSg5qtANYIjPwDmJidNEJBd65A3+eh+W1t8LgQAf7b9">
  </head>
  <body>
    <h1>Hello World</h1>
  </body>
</html>
"
`;

exports[`vite-plugin-bun-csp styles it should handle external styles 1`] = `
"<html>
  <head><meta http-equiv="Content-Security-Policy" content="base-uri 'none'; default-src 'self'; object-src 'none'; style-src https://cdn.jsdelivr.net" />
    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/reset-css@5.0.2/reset.min.css" integrity="sha384-keU0jZorLpCR/4h2i+vCgG3TUPKXXt1zOsXoIcwy0uRJKOBQ26zPqJpJj6hPdgpa" crossorigin="anonymous" />
  </head>
  <body>
    <h1>Hello World</h1>
  </body>
</html>
"
`;

exports[`vite-plugin-bun-csp styles should automatically handle Google Fonts 1`] = `
"<html>
  <head><meta http-equiv="Content-Security-Policy" content="base-uri 'none'; default-src 'self'; object-src 'none'; style-src 'sha384-bVH4IxTsxUcs8AJWz53Ymr+Vn3ABxlZereLqJsu/ReoAsaaYqN7Hm0+TPFeKhdxJ' https://fonts.googleapis.com; font-src fonts.gstatic.com" />
    <link rel="preconnect" href="https://fonts.googleapis.com" />
    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
    <link href="https://fonts.googleapis.com/css2?family=Tomorrow&display=swap" rel="stylesheet" crossorigin="anonymous" />
    <style>
      :root {
        font-family: "Tomorrow";
      }
    </style>
  </head>
  <body>
    <h1>Hello World</h1>
  </body>
</html>
"
`;

exports[`vite-plugin-bun-csp edge-cases should skip elements that already have an integrity hash 1`] = `
"
        <html>
          <head>
            <script src="index.js" integrity="sha384-vTb4ka/HRdvMTCK99IHf4grsm4H7ngk8QotM6VmrozV6fFTs6kVHItFSLXWTgnAh"></script>
            <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/reset-css@5.0.2/reset.min.css" integrity="sha384-keU0jZorLpCR/4h2i+vCgG3TUPKXXt1zOsXoIcwy0uRJKOBQ26zPqJpJj6hPdgpa" />
          </head>
          <body>
            <h1 id="app"></h1>
          </body>
        </html>
      "
`;

exports[`vite-plugin-bun-csp edge-cases should not duplicate hash or url values 1`] = `
"
        <html>
          <head>
            <script src="index.js" integrity="sha384-vTb4ka/HRdvMTCK99IHf4grsm4H7ngk8QotM6VmrozV6fFTs6kVHItFSLXWTgnAh"></script>
            <script src="index.js" integrity="sha384-vTb4ka/HRdvMTCK99IHf4grsm4H7ngk8QotM6VmrozV6fFTs6kVHItFSLXWTgnAh"></script>
            <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/reset-css@5.0.2/reset.min.css" integrity="sha384-keU0jZorLpCR/4h2i+vCgG3TUPKXXt1zOsXoIcwy0uRJKOBQ26zPqJpJj6hPdgpa" />
            <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/reset-css@5.0.2/reset.min.css" integrity="sha384-keU0jZorLpCR/4h2i+vCgG3TUPKXXt1zOsXoIcwy0uRJKOBQ26zPqJpJj6hPdgpa" crossorigin="anonymous" />
          </head>
          <body>
            <h1 id="app"></h1>
          </body>
        </html>
      "
`;

exports[`vite-plugin-bun-csp algorithms should support the sha256 algorithm 1`] = `
"<html>
  <head><meta http-equiv="Content-Security-Policy" content="base-uri 'none'; default-src 'self'; object-src 'none'; script-src-elem 'sha256-nP25Pzivzy0Har7NZtMr/TODzfGWdlTrwmomYF2vQXM=' 'sha256-LL1trj6s1DR6qNh4ukIlQj/8NFdHwDQaUeIu87TwMHY=' 'sha256-QuP42mDRshb0EzsB1V3VXyvcvRbVgbx4ir8D/7BFgw0='; style-src 'sha256-LtGmiPOYFkJYXPu3Xt2sSbdUbKJ3U/7Cp0uFAlTEmrU=' https://cdn.jsdelivr.net 'self'; script-src 'strict-dynamic'" />
    <script src="https://cdn.jsdelivr.net/npm/dayjs@1.11.13/dayjs.min.js" integrity="sha256-nP25Pzivzy0Har7NZtMr/TODzfGWdlTrwmomYF2vQXM=" crossorigin="anonymous"></script>
    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@picocss/pico@2.0.6/css/pico.min.css" integrity="sha256-3V/VWRr9ge4h3MEXrYXAFNw/HxncLXt9EB6grMKSdMI=" crossorigin="anonymous" />
    <style>
      #app {
        color: purple;
      }
    </style>
    <script type="module" crossorigin src="/assets/index-C9hA1kMn.js" integrity="sha256-LL1trj6s1DR6qNh4ukIlQj/8NFdHwDQaUeIu87TwMHY="></script>
    <link rel="stylesheet" crossorigin href="/assets/index-CZz58IoC.css" integrity="sha256-ZLE5urGkSEdDRpzewM/O6m+FePTt7sNKfTrrEy8fT/0=">
  </head>
  <body>
    <main class="container">
      <h1 id="app"></h1>
      <h3 id="date"></h3>
    </main>
    <script>
      document.querySelector("#app").innerHTML = \`Hello World\`;
    </script>
  </body>
</html>
"
`;

exports[`vite-plugin-bun-csp algorithms should support the sha384 algorithm 1`] = `
"<html>
  <head><meta http-equiv="Content-Security-Policy" content="base-uri 'none'; default-src 'self'; object-src 'none'; script-src-elem 'sha384-DpVxUeeBWjUvUV1czyIHJAjh+jYUZFu2lLakbdua5vbwOrBGi1UgaKCHjTC+x3Ky' 'sha384-eq2PlAE9Ci0XUAfs71G6Jn4YdOiGl6dhZYvSq5r8okC0tTsxa0kqvpKkyFaDT+kX' 'sha384-38HOgRVS9paAKT7chxOOnubobWZ3kJfici4Bp1PHnTX8gK1inuKN/7g2KVNbcmuY'; style-src 'sha384-2IH9S6CFnaEWZJOjFu078HQpjmJLXFirDvUII2HOVzcVuoXg8rpY+1vtY29CsbPC' https://cdn.jsdelivr.net 'self'; script-src 'strict-dynamic'" />
    <script src="https://cdn.jsdelivr.net/npm/dayjs@1.11.13/dayjs.min.js" integrity="sha384-DpVxUeeBWjUvUV1czyIHJAjh+jYUZFu2lLakbdua5vbwOrBGi1UgaKCHjTC+x3Ky" crossorigin="anonymous"></script>
    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@picocss/pico@2.0.6/css/pico.min.css" integrity="sha384-7P0NVe9LPDbUCAF+fH2R8Egwz1uqNH83Ns/bfJY0fN2XCDBMUI2S9gGzIOIRBKsA" crossorigin="anonymous" />
    <style>
      #app {
        color: purple;
      }
    </style>
    <script type="module" crossorigin src="/assets/index-C9hA1kMn.js" integrity="sha384-eq2PlAE9Ci0XUAfs71G6Jn4YdOiGl6dhZYvSq5r8okC0tTsxa0kqvpKkyFaDT+kX"></script>
    <link rel="stylesheet" crossorigin href="/assets/index-CZz58IoC.css" integrity="sha384-x7j0GfbBZPnTbD+B5g/PGZOzdW8D2ToXR9FSI/uh+JHDtiuO42/bd5kwlV4UanU2">
  </head>
  <body>
    <main class="container">
      <h1 id="app"></h1>
      <h3 id="date"></h3>
    </main>
    <script>
      document.querySelector("#app").innerHTML = \`Hello World\`;
    </script>
  </body>
</html>
"
`;

exports[`vite-plugin-bun-csp algorithms should support the sha512 algorithm 1`] = `
"<html>
  <head><meta http-equiv="Content-Security-Policy" content="base-uri 'none'; default-src 'self'; object-src 'none'; script-src-elem 'sha512-FwNWaxyfy2XlEINoSnZh1JQ5TRRtGow0D6XcmAWmYCRgvqOUTnzCxPc9uF35u5ZEpirk1uhlPVA19tflhvnW1g==' 'sha512-n4EoMAP6D7cUYgwfeok3doRXYciju7iuVsvWTL47MUrkr/KYYeTziYpaF196m8ZbIAgzQigkqO4/gRSEs25IqA==' 'sha512-YWgALCmz5eSTVsPOi0xlUmW7XVImjghbsKn0sUTm+RAr7sQfeF4GVRm/SJ+l99sQoluJIM9F+IfG60ufRg3P2w=='; style-src 'sha512-ke/umhQiERl6gm3X5tJlOs/zyCG3VpCXmnMLt24pfv9/Sx3CTcxpHC7BRzBmgD7mE8uR6WVj1TKZvjrYcK0fMw==' https://cdn.jsdelivr.net 'self'; script-src 'strict-dynamic'" />
    <script src="https://cdn.jsdelivr.net/npm/dayjs@1.11.13/dayjs.min.js" integrity="sha512-FwNWaxyfy2XlEINoSnZh1JQ5TRRtGow0D6XcmAWmYCRgvqOUTnzCxPc9uF35u5ZEpirk1uhlPVA19tflhvnW1g==" crossorigin="anonymous"></script>
    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@picocss/pico@2.0.6/css/pico.min.css" integrity="sha512-UXfikgakSZBii5lkvmDCRO+IYWQhTtwMOJ+3EmGEA+oA82kvbSskgw3OI16Jx1kINgF8aqOkYE+c9h4m6muONg==" crossorigin="anonymous" />
    <style>
      #app {
        color: purple;
      }
    </style>
    <script type="module" crossorigin src="/assets/index-C9hA1kMn.js" integrity="sha512-n4EoMAP6D7cUYgwfeok3doRXYciju7iuVsvWTL47MUrkr/KYYeTziYpaF196m8ZbIAgzQigkqO4/gRSEs25IqA=="></script>
    <link rel="stylesheet" crossorigin href="/assets/index-CZz58IoC.css" integrity="sha512-cdw8JfSRqdKqxBVJa4Qs25AtMyj3BfWW4pKNRUkv+vKTqux0xw5q62UYJlmlyYKUeCdrFo/Vw1KcMsu+2pbF7A==">
  </head>
  <body>
    <main class="container">
      <h1 id="app"></h1>
      <h3 id="date"></h3>
    </main>
    <script>
      document.querySelector("#app").innerHTML = \`Hello World\`;
    </script>
  </body>
</html>
"
`;

exports[`vite-plugin-bun-csp policy should add to existing policy 1`] = `
"<html>
  <head><meta http-equiv="Content-Security-Policy" content="font-src fonts.gstatic.com; style-src fonts.googleapis.com 'sha384-bVH4IxTsxUcs8AJWz53Ymr+Vn3ABxlZereLqJsu/ReoAsaaYqN7Hm0+TPFeKhdxJ' https://fonts.googleapis.com" />
    <link rel="preconnect" href="https://fonts.googleapis.com" />
    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
    <link href="https://fonts.googleapis.com/css2?family=Tomorrow&display=swap" rel="stylesheet" crossorigin="anonymous" />
    <style>
      :root {
        font-family: "Tomorrow";
      }
    </style>
  </head>
  <body>
    <h1>Hello World</h1>
  </body>
</html>
"
`;

exports[`vite-plugin-bun-csp should add a default CSP tag to the html 1`] = `
"<html><head><meta http-equiv="Content-Security-Policy" content="base-uri 'none'; default-src 'self'; object-src 'none'" />
  <body>
    <h1>Hello World</h1>
  </body>
</html>
"
`;
